# packages/api/src/handlers/user-organisation/organisation-proc.js
@@ -1,0 +1,13 @@
+/**
+ * Consume Prepare output for a site
+ * @param site.dataValues
+ * @returns {any}
+ */
+export const prepareResponse = a => Object.assign((({
+  createdAt,
+  updatedAt,
+  ...l
+}) => l)(a), {
+  createdAt: a.createdAt.toISOString(),
+  updatedAt: a.updatedAt.toISOString()
+})
