# packages/api/src/handlers/user-role/get-user-role-by-id.js
@@ -1,0 +1,30 @@
+import { models } from '@defra/wls-database-model'
+import { prepareResponse } from './user-role-proc.js'
+import { APPLICATION_JSON } from '../../constants.js'
+import { checkCache } from '../utils.js'
+import { REDIS } from '@defra/wls-connectors-lib'
+const { cache } = REDIS
+
+export default async (context, req, h) => {
+  try {
+    const { roleId } = context.request.params
+    const result = await checkCache(req)
+    if (result) {
+      return h.response(result)
+        .type(APPLICATION_JSON)
+        .code(200)
+    }
+    const userRole = await models.userRoles.findByPk(roleId)
+    if (!userRole) {
+      return h.response().code(404)
+    }
+    const responseBody = prepareResponse(userRole.dataValues)
+    await cache.save(req.path, responseBody)
+    return h.response(responseBody)
+      .type(APPLICATION_JSON)
+      .code(200)
+  } catch (err) {
+    console.error('Error SELECTING from the USER-ROLE table', err)
+    throw new Error(err.message)
+  }
+}
