# packages/api/src/handlers/user/put-user.js
@@ -1,7 +1,6 @@
 import { APPLICATION_JSON } from '../../constants.js'
 import { models } from '@defra/wls-database-model'
-import { prepareResponse } from './user-proc.js'
-import { toHash } from './password.js'
+import { prepareResponse, alwaysExclude } from './user-proc.js'
 import { REDIS } from '@defra/wls-connectors-lib'
 const { cache } = REDIS
 
@@ -11,31 +10,54 @@ const { cache } = REDIS
 export default async (context, req, h) => {
   try {
     const { userId } = context.request.params
-
-    // This does nothing if a password (change) or cookie preferences is not supplied at this point,
-    if (!req.payload.password && !req.payload.cookiePrefs) {
-      return h.response().code(204)
-    }
-
-    const [found, updatedUser] = await models.users.update({
-      ...(req.payload.cookiePrefs && { cookiePrefs: req.payload.cookiePrefs }),
-      ...(req.payload.password && { password: await toHash(req.payload.password) })
-    }, {
-      where: {
-        id: userId
-      },
-      returning: true
+    const [user, created] = await models.users.findOrCreate({
+      where: { id: userId },
+      defaults: {
+        id: userId,
+        username: req.payload.username,
+        user: alwaysExclude(Object.assign({}, req.payload)),
+        cookiePrefs: req.payload?.cookiePrefs
+      }
     })
 
-    if (found !== 1) {
-      return h.response().code(404)
-    }
+    if (created) {
+      const response = prepareResponse(user.dataValues)
+      await cache.save(`/user/${userId}`, response)
+      return h.response(response)
+        .type(APPLICATION_JSON)
+        .code(201)
+    } else {
+      // Can update fields: cookiePrefs, email, lastName, firstName
+      const updateObject = {
+        ...(req.payload.cookiePrefs && { cookiePrefs: req.payload.cookiePrefs }),
+        ...((req.payload.email || req.payload.firstName || req.payload.lastName) && {
+          user: {
+            email: req.payload?.email || user.dataValues.email?.firstName,
+            firstName: req.payload?.firstName || user.dataValues.user?.firstName,
+            lastName: req.payload?.lastName || user.dataValues.user?.lastName
+          }
+        })
+      }
 
-    const response = prepareResponse(updatedUser[0].dataValues)
-    await cache.save(`/user/${userId}`, response)
-    return h.response(response)
-      .type(APPLICATION_JSON)
-      .code(200)
+      // Look for the no-op
+      if (Object.keys(updateObject).length === 0) {
+        const response = prepareResponse(user.dataValues)
+        return h.response(response)
+          .type(APPLICATION_JSON)
+          .code(202)
+      }
+
+      const [, updatedUser] = await models.users.update(updateObject, {
+        where: { id: userId },
+        returning: true
+      })
+
+      const responseBody = prepareResponse(updatedUser[0].dataValues)
+      await cache.save(req.path, responseBody)
+      return h.response(responseBody)
+        .type(APPLICATION_JSON)
+        .code(200)
+    }
   } catch (err) {
     console.error('Error updating the USERS table', err)
     throw new Error(err.message)
