# packages/api/src/server.js
@@ -4,13 +4,32 @@ import { SERVER_PORT } from './constants.js'
 import db from 'debug'
 
 import {
+  getUserRole,
+  putUserRole
+} from './handlers/user-role/user-role.js'
+
+import {
   getUserByUserId,
   getUsers,
   deleteUser,
   postUser,
-  putUser,
-  authenticateUser
+  putUser
 } from './handlers/user/user.js'
+
+import {
+  putUserUserRole,
+  getUserUserRole
+} from './handlers/user-user-role/user-user-role.js'
+
+import {
+  getOrganisationById,
+  putOrganisation
+} from './handlers/organisation/organisation.js'
+
+import {
+  getUserOrganisationById,
+  putUserOrganisation
+} from './handlers/user-organisation/user-organisation.js'
 
 import {
   getContacts,
@@ -184,12 +203,19 @@ const createServer = async () => new Hapi.Server({ port: SERVER_PORT })
 // Split out to comply with sonar-cube line restriction on functions
 const handlers = {
   // User handlers
+  getUserRole,
+  putUserRole,
   getUserByUserId,
   getUsers,
   postUser,
   putUser,
+  putUserUserRole,
+  getUserUserRole,
   deleteUser,
-  authenticateUser,
+  getOrganisationById,
+  putOrganisation,
+  getUserOrganisationById,
+  putUserOrganisation,
 
   // Contact handlers
   getContacts,
